# streamlit-sqlalchemy

./: .gitignore  CONTRIBUTING  README.md  example.py  pyproject.toml
.streamlit/: secrets.toml
assets/: streamlit-example-2023-12-31-16-12-91.webm  streamlit-example-2024-01-06-13-01-36.webm
examples/: example.py  example2.py  models.py
src/streamlit_sqlalchemy/: README.md  __init__.py  mixin.py  pyproject.toml  streamlit_sqlalchemy_view.py
tests/: conftest.py  objects.py
tests/streamlit_sqlalchemy/: test_mixin.py  test_streamlit_sqlalchemy_view.py
tests/streamlit_sqlalchemy/mixin/: create_form.py  create_form_advanced.py  delete_button.py  delete_form.py  edit_button.py  update_form.py  update_form_except_m2o.py  update_select_form.py
