[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlit-sqlalchemy"
version = "0.0.2"
authors = [
  { name="artygo8", email="arthurgossuin@gmail.com" },
]
description = "Some templating for streamlit and sqlalchemy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/artygo8/streamlit-sqlalchemy"
Issues = "https://github.com/artygo8/streamlit-sqlalchemy/issues"
